--- a/about.html
+++ b/about.html
@@ -39,10 +39,10 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Blog</a>
+            <a class="nav-link" href="blog.html">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
         </ul>
       </div>
