--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="blog.html">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
         </ul>
       </div>
