probably enough for friday

--- a/about.html
+++ b/about.html
@@ -134,10 +134,10 @@
                         <hr class="section-heading-spacer">
                         <div class="clearfix"></div>
                         <h2 class="section-heading">Morgan Yeung</h2>
-                        <p class="lead">Mechatronics Engineering Student </p>
+                        <p class="lead">Mechatronics Engineering Student interested in embedded software.  Mainly focused on electrical and software component for this project </p>
                     </div>
                     <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                        <img class="img-responsive" src="img/shawn.jpg" alt="">
+                        <img class="img-responsive" src="img/morgan.jpg" alt="">
                     </div>
                 </div>
 
@@ -180,7 +180,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+          <p class="copyright text-muted">Copyright &copy; SymSense 2021</p>
         </div>
       </div>
     </div>
