--- a/index.html
+++ b/index.html
@@ -71,10 +71,8 @@
     <div class="content-section-a">
       <div class="container">
           <div class="row">
-                  <hr class="section-heading-spacer">
-                  <div class="clearfix"></div>
-                  <h2 class="section-heading">For our FYDP, we decided to help solve one of the problems of COVID-19. SOmething something making our spaces safe again by checking everyone who enters yadadadada</h2>
-                  <p class="lead"> </p>
+                  <h2 class="section-heading">Our Motivation</h2>
+                  <p class="lead"> For our FYDP, we decided to help tackle the COVID-19 problem of on-site in-person screening before entry.  Institutions need a cheap, automated COVID-19 screening solution before individuals are allowed to enter. There is a need to replace this person to person check to reduce the potential exposure to the virus. Currently, there are already similar products on the market, which are mostly being used in industrial areas such as factories or places where a large number of people can cross paths like transit hubs. Unfortunately, they are costly with many costing upwards of $2000, and more importantly, cannot tell if the mask is being worn properly. We feel this is especially important due to the second wave, the anti-maskers, and others not adhering to COVID-19 guidelines.</p>
           </div>
 
       </div>
@@ -89,8 +87,8 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Component 1:<br>Mask Detection</h2>
-                    <p class="lead"> </p>
+                    <h2 class="section-heading"><br>Proper Mask Use Detection</h2>
+                    <p class="lead"> Using the pi camera and machine learning, SymSense will not only detect if the user is wearing a mask, but ensure it is on properly (covering both the nose and mouth) before the user is allowed onto the premises </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/picamera.jpg" alt="">
@@ -111,8 +109,8 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Component 2:<br>Non-Contact Temperature Check</h2>
-                    <p class="lead"></p>
+                    <h2 class="section-heading"><br>Non-Contact Temperature Check</h2>
+                    <p class="lead">Using a medical-grade IR temperature sensor, SymSense will measure the forehead temperature of the user to ensure that the user is not currently showing the fever symptom of COVID-19</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/tempsensor.jpg" alt="">
@@ -133,8 +131,8 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Component 3:<br>Mandatory Hand Sanitization</h2>
-                    <p class="lead"> </p>
+                    <h2 class="section-heading"><br>Mandatory Hand Sanitization</h2>
+                    <p class="lead">Symsense will require users to activate the hand sanitizer pump before entry is allowed </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/handsanitizer.jpg" alt="">
@@ -178,7 +176,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+          <p class="copyright text-muted">Copyright &copy; SymSense 2021</p>
         </div>
       </div>
     </div>
