--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Alexandra Meyer</h2>
-                    <p class="lead"> Mechanical Engineering Student</p>
+                    <p class="lead">Mechanical Engineering Student</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/alex.jpg" alt="">
@@ -134,7 +134,7 @@
                         <hr class="section-heading-spacer">
                         <div class="clearfix"></div>
                         <h2 class="section-heading">Morgan Yeung</h2>
-                        <p class="lead">Mechatronics Engineering Student interested in embedded software.  Mainly focused on electrical and software component for this project </p>
+                        <p class="lead">I am a Mechatronics Engineering student interested in embedded software.  I am mainly focused on the electrical and system software component for this project.</p>
                     </div>
                     <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                         <img class="img-responsive" src="img/morgan.jpg" alt="">
