landing page done

--- a/index.html
+++ b/index.html
@@ -67,127 +67,109 @@
   <!-- Main Content -->
 
   <!-- Page Content -->
-  <a  name="Intro"></a>
-    <div class="content-section-a">
-      <div class="container">
-          <div class="row">
-                  <h2 class="section-heading">Our Motivation</h2>
-                  <p class="lead"> For our FYDP, we decided to help tackle the COVID-19 problem of on-site in-person screening before entry.  Institutions need a cheap, automated COVID-19 screening solution before individuals are allowed to enter. There is a need to replace this person to person check to reduce the potential exposure to the virus. Currently, there are already similar products on the market, which are mostly being used in industrial areas such as factories or places where a large number of people can cross paths like transit hubs. Unfortunately, they are costly with many costing upwards of $2000, and more importantly, cannot tell if the mask is being worn properly. We feel this is especially important due to the second wave, the anti-maskers, and others not adhering to COVID-19 guidelines.</p>
-          </div>
+  <div class="container">
+    <div class="row">
+      <h2 class="section-heading">Our Motivation</h2>
+      <p class="lead"> For our FYDP, we decided to help tackle the COVID-19 problem of on-site in-person screening before entry.  Institutions need a cheap, automated COVID-19 screening solution before individuals are allowed to enter. There is a need to replace this person to person check to reduce the potential exposure to the virus. Currently, there are already similar products on the market, which are mostly being used in industrial areas such as factories or places where a large number of people can cross paths like transit hubs. Unfortunately, they are costly with many costing upwards of $2000, and more importantly, cannot tell if the mask is being worn properly. We feel this is especially important due to the second wave, the anti-maskers, and others not adhering to COVID-19 guidelines.</p>
+    </div>
+  </div>
+  <hr style="width:0%">
 
+  <div class="container">
+    <h1>SymSense Features</h1>
+    <div class="row">
+      <div class="col-lg-8">
+        <h2 class="section-heading"><br>Proper Mask Use Detection</h2>
+        <p class="lead"> Using the pi camera and machine learning, SymSense will not only detect if the user is wearing a mask, but ensure it is on properly (covering both the nose and mouth) before the user is allowed onto the premises </p>
       </div>
-      <!-- /.container -->
+      <div class="col-lg-2">
+        <hr style="width:0%">
+        <hr style="width:0%">
+        <hr style="width:0%">
+        <img class="img-responsive" src="img/maskdetection.png" alt="">
+      </div>
+    </div>
+  </div>
+  <hr style="width:0%">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8">
+        <h2 class="section-heading"><br>Non-Contact Temperature Check</h2>
+        <p class="lead">Using a medical-grade IR temperature sensor, SymSense will measure the forehead temperature of the user to ensure that the user is not currently showing the fever symptom of COVID-19</p>
+      </div>
+      <div class="col-lg-2">
+        <hr style="width:0%">
+        <hr style="width:0%">
+        <hr style="width:0%">
+        <img class="img-responsive" src="img/tempsensor.png" alt="">
+      </div>
+    </div>
 
   </div>
 
-	<a  name="Product"></a>
-    <div class="content-section-a">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading"><br>Proper Mask Use Detection</h2>
-                    <p class="lead"> Using the pi camera and machine learning, SymSense will not only detect if the user is wearing a mask, but ensure it is on properly (covering both the nose and mouth) before the user is allowed onto the premises </p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/picamera.jpg" alt="">
-                </div>
-            </div>
+<hr style="width:0%">
+  <div class="container">
 
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-a -->
-
-    <div class="content-section-b">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading"><br>Non-Contact Temperature Check</h2>
-                    <p class="lead">Using a medical-grade IR temperature sensor, SymSense will measure the forehead temperature of the user to ensure that the user is not currently showing the fever symptom of COVID-19</p>
-                </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/tempsensor.jpg" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-b -->
-
-    <div class="content-section-a">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading"><br>Mandatory Hand Sanitization</h2>
-                    <p class="lead">Symsense will require users to activate the hand sanitizer pump before entry is allowed </p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/handsanitizer.jpg" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-a -->
-
-  <!-- Footer -->
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <ul class="list-inline text-center">
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-          <p class="copyright text-muted">Copyright &copy; SymSense 2021</p>
-        </div>
+    <div class="row">
+      <div class="col-lg-8">
+        <h2 class="section-heading"><br>Mandatory Hand Sanitization</h2>
+        <p class="lead">Symsense will require users to activate the hand sanitizer pump before entry is allowed </p>
+      </div>
+      <div class="col-lg-2">
+        <hr style="width:0%">
+        <hr style="width:0%">
+        <hr style="width:0%">
+        <img class="img-responsive" src="img/handsanitizer.png" alt="">
       </div>
     </div>
-  </footer>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  </div>
 
-  <!-- Custom scripts for this template -->
-  <script src="js/clean-blog.min.js"></script>
+
+
+<!-- Footer -->
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+        <ul class="list-inline text-center">
+          <li class="list-inline-item">
+            <a href="#">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+        </ul>
+        <p class="copyright text-muted">Copyright &copy; SymSense 2021</p>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<!-- Bootstrap core JavaScript -->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+<!-- Custom scripts for this template -->
+<script src="js/clean-blog.min.js"></script>
 
 </body>
 
