--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>SymSense</h1>
-            <span class="subheading">Automated Safety Scan</span>
+            <span class="subheading">Scanning For a Better Future</span>
           </div>
         </div>
       </div>
