adding more to my post

--- a/component_testing.html
+++ b/component_testing.html
@@ -78,7 +78,7 @@
             <img class="img-fluid" src="img/component_testing.jpg" alt="">
           </a>
           <span class="caption text-muted">Wired up prototype</span>
-          <p> With that wired up, I proceeded to write classes for each of them to test them out in Python.  With all the components individually working, it was time to mechanically and electrically assmeble them together and work on the final solution </p>
+          <p> With that wired up, I proceeded to write classes for each of them to test them out in Python.  This meant reading from the temperature sensor, controlling both the pump and the servo motor and of course, accessing the camera feed.  With all the components individually working, it was time to mechanically and electrically assmeble them together and work on the final solution </p>
         </div>
       </div>
     </div>
