--- a/component_testing.html
+++ b/component_testing.html
@@ -117,7 +117,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+          <p class="copyright text-muted">Copyright &copy; SymSense 2021</p>
         </div>
       </div>
     </div>
