--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
                     <p class="lead">Mechanical Engineering Student</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/alex.JPG" alt="">
+                    <img class="img-responsive" src="img/alex1.PNG" alt="">
                 </div>
             </div>
 
@@ -97,7 +97,7 @@
                     <p class="lead">Mechatronics Engineering Student</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/anna.JPG" alt="">
+                    <img class="img-responsive" src="img/anna1.PNG" alt="">
                 </div>
             </div>
 
@@ -119,7 +119,7 @@
                     <p class="lead">Mechanical Engineering Student </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/shawn.JPG" alt="">
+                    <img class="img-responsive" src="img/shawn1.PNG" alt="">
                 </div>
             </div>
 
@@ -137,7 +137,7 @@
                         <p class="lead">I am a Mechatronics Engineering student interested in embedded software.  I am mainly focused on the electrical and system software component for this project.</p>
                     </div>
                     <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                        <img class="img-responsive" src="img/morgan.JPG" alt="">
+                        <img class="img-responsive" src="img/morgan1.PNG" alt="">
                     </div>
                 </div>
 
