--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Alexandra Meyer</h2>
-                    <p class="lead">Mechanical Engineering Student leading the mechanical design and assembly for this project. </p>
+                    <p class="lead">Mechanical Engineering student leading the mechanical design and assembly for this project. </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/alex1.PNG" alt="">
