--- a/integration.html
+++ b/integration.html
@@ -60,7 +60,7 @@
             <h1>Component Testing</h1>
             <h2 class="subheading">Woodshop</h2>
             <span class="meta">Posted by
-              <a href="#">Morgan Yeung</a>
+              <a href="#">Alexandra Meyer</a>
               on February 22, 2021</span>
           </div>
         </div>
