--- a/mech_integration.html
+++ b/mech_integration.html
@@ -77,7 +77,7 @@
           <h2 class="section-heading">First Prototype</h2>
           <a href="#">
           <!--change photo-->
-            <img class="img-fluid" src="img/component_testing.jpg" alt="">
+            <img class="img-fluid" src="img/prototype1.PNG" alt="">
           </a>
           <span class="caption text-muted">Wired up prototype</span>
           <p> Inital build session began to determine the layout and what other hardware or materials are needed to carry out this prototype design. Since, the prototype design was modified from the original design, much less materials and tools are needed. However, the layout and overall mechnaical display of the system remains of a high importance. This allowed us to determine the next steps before the next build session.  </p>
