small blurb about team

--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Anna Shan</h2>
-                    <p class="lead">Mechatronics Engineering Student</p>
+                    <p class="lead">Mechatronics Engineering Student leading the electrical component for this project.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/anna1.PNG" alt="">
@@ -116,7 +116,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Shawn Michael</h2>
-                    <p class="lead">Mechanical Engineering Student </p>
+                    <p class="lead">Mechanical Engineering Student leading the machine learning component for this project </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/shawn1.PNG" alt="">
